<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="lbl_return">返回</string>
    <string name="lbl_rss_error">抓取文章列表出错</string>
    <string name="lbl_rss">文章列表</string>
    <string name="lbl_video">视频列表</string>
    <string name="lbl_book">电子书</string>
    <string name="lbl_setting">设置</string>
    <string name="lbl_exit">退出</string>
    <string name="lbl_wait">处理中，请稍候...</string>

    <string name="dlg_exit_title">确认退出么？</string>
    <string name="dlg_ok">确定</string>
    <string name="dlg_cancel">取消</string>

    <string name="dlg_aboutMe_title">关于我们</string>

    <string name="dlg_networkError_title">出错</string>
    <string name="dlg_networkError_message">网络链接异常！</string>

    <string name="dlg_update_title">自动更新</string>
    <string name="dlg_update_message">发现新的版本，要更新么？</string>

    <string name="dlg_download_title">正在下载</string>

</resources>
