<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <Button
            android:id="@+id/mainRss"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_rss"/>
    <Button
            android:id="@+id/mainVideo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_video"/>
    <Button
            android:id="@+id/mainBook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_book"/>
    <Button
            android:id="@+id/mainSetting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_setting"/>
    <Button
            android:id="@+id/mainAboutMe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_aboutMe"/>

    <Button
            android:id="@+id/mainExit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_exit"/>


</LinearLayout>

